src/objects/Cifin__c.object
<CustomObject>
    <fields>
        <fullName>Ciiu__c</fullName>
        <label>Ciiu</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultado_por__c</fullName>
        <label>Consultado por</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado_Documento__c</fullName>
        <label>Estado Documento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Consulta__c</fullName>
        <label>Fecha Consulta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hora_Consulta__c</fullName>
        <label>Hora Consulta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Asesor__c</fullName>
        <label>Nombre Asesor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Cliente__c</fullName>
        <label>Nombre Cliente</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Documento__c</fullName>
        <label>Numero Documento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Informe__c</fullName>
        <label>Numero Informe</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rango_Edad__c</fullName>
        <label>Rango Edad</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Documento__c</fullName>
        <label>Tipo Documento</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Cifin</label>
    <nameField>
        <displayFormat>CIF-{000000}</displayFormat>
        <label>Id Cifin</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cifines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>